[metadata]
name = pythoncalculator
version = 0.0.1
author = Chris Bartley, Pitak Benjarattanaporn, Rebecca Welch
author_email = csjbartley1@sheffield.ac.uk, pbenjarattanaporn1@sheffield.ac.uk, r.welch@sheffield.ac.uk
description = Perform basic calculations in python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/c-bartley/python-calculator
project_urls =
    Bug Tracker = https://github.com/c-bartley/python-calculator/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
